# docullim

./: .gitignore  LICENSE  README.md  devbox.json  pyproject.toml
assets/: docullim.cast
docullim/: __init__.py  cache.py  cli.py  config.py  generator.py
tests/: test_docullim.py
